gemfile conflict resolve

--- a/23_javascript_practice/front-end/index.html
+++ b/23_javascript_practice/front-end/index.html
@@ -3,9 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <script src="src/tasks.js" charset="utf-8"></script>
     <script src="src/index.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+<h1>Secret Tasks</h1>
+<form id="add-task" class="" action="" method="">
+    <h4>Add Task</h4>
+    <label>Description:</label> <input id="add-task-desc" type="text" name="" value=""> <br>
+    <label>Priority:</label> <input id="add-task-priority" type="text" name="" value=""> <br>
+    <input id="submit" type="submit">
+  </form>
+<div class="task-holder">
+  <div id="tasks">
 
+  </div>
+</div>
   </body>
 </html>
